Refactor logging and validation services; integrate Redis queue management
- Moved logger implementation to internal/logger package and updated usage across services.
- Introduced a new validator service in internal/validator for structured validation.
- Enhanced NewUserService, NewAuthService, and NewTransactionService to utilize the new logger.
- Added Redis queue management with Asynq for handling deposit, withdraw, and transfer tasks.
- Updated container configuration to include Redis URL and logger initialization.
- Removed deprecated logger code from internal/container/logger.
- Improved error handling and logging in services for better traceability.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,16 @@ services:
       - financialsystempro_postgres_data:/var/lib/postgresql/data
       - ./init-scripts:/docker-entrypoint-initdb.d
 
+  redis:
+    image: redis:7-alpine
+    container_name: financialsystempro_redis
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - financialsystempro_redis_data:/data
+    command: redis-server --appendonly yes
+
 volumes:
   financialsystempro_postgres_data:
+  financialsystempro_redis_data:
