--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,6 +43,7 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: latest
+          install-mode: goinstall
           args: --timeout=5m --out-format=colored-line-number
 
   vet:
