--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -109,6 +109,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: gosec.sarif
+          category: gosec
       - name: Conditional CodeQL Init
         if: ${{ inputs.run_codeql == 'true' }}
         uses: github/codeql-action/init@v3
@@ -135,6 +136,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: trivy-fs.sarif
+          category: trivy-fs
       - name: Trivy FS JSON
         run: ./trivy filesystem --ignore-unfixed --severity HIGH,CRITICAL --format json --output trivy-fs.json . || true
 
@@ -185,6 +187,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: trivy-fs.sarif
+          category: trivy-fs-ci
       - name: Trivy FS JSON (CI)
         run: ./trivy filesystem --ignore-unfixed --severity HIGH,CRITICAL --format json --output trivy-fs.json . || true
       - name: Trivy Image SARIF
@@ -193,6 +196,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: trivy-image.sarif
+          category: trivy-image-ci
       - name: Trivy Image JSON
         run: ./trivy image --ignore-unfixed --severity HIGH,CRITICAL --format json --output trivy-image.json ghcr.io/${{ github.repository_owner }}/financialsystempro:${{ github.sha }} || true
       - name: Gate vulnerabilities (CI image)
