--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: FinancialSystemPro – Unified Pipeline v2.0
+name: FinancialSystemPro Unified Pipeline v2.0
 
 on:
   push:
@@ -26,12 +26,6 @@ jobs:
         id: set
         run: echo "go-version=${GO_VERSION}" >> $GITHUB_OUTPUT
 
-  # ------------------------------------------------------------------------------------
-  #
-  #   STATIC CHECKS (executam em paralelo)
-  #
-  # ------------------------------------------------------------------------------------
-
   lint:
     name: Lint (Parallel)
     runs-on: ubuntu-latest
@@ -42,7 +36,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ needs.setup.outputs.go-version }}
-
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
@@ -59,7 +52,6 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ needs.setup.outputs.go-version }}
-
       - name: Go Vet
         run: go vet ./...
 
@@ -73,20 +65,14 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ needs.setup.outputs.go-version }}
-
       - name: Check format
         run: |
-          if [ -n "$(gofmt -l .)" ]; then
-            echo "Unformatted Go files detected:"
-            gofmt -l .
+          UNFORMATTED=$(gofmt -l .)
+          if [ -n "$UNFORMATTED" ]; then
+            echo "The following files are not formatted:"
+            echo "$UNFORMATTED"
             exit 1
           fi
-
-  # ------------------------------------------------------------------------------------
-  #
-  #   TESTS + COVERAGE (roda após os estáticos)
-  #
-  # ------------------------------------------------------------------------------------
 
   tests:
     name: Run Tests + Coverage Enforcement
@@ -98,36 +84,24 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: ${{ needs.setup.outputs.go-version }}
-
       - name: Enable Go caching
         run: go env -w GOMODCACHE=$HOME/.cache/go-build
-
-      - name: Install Test Dependencies
+      - name: Install dependencies
         run: go mod download
-
       - name: Run Tests
         run: go test ./... -coverprofile=coverage.out -covermode=atomic
-
       - name: Enforce Coverage Threshold
         run: |
           TOTAL=$(go tool cover -func=coverage.out | awk '/total:/ {gsub("%","",$3); print $3}')
-          echo "Coverage: $TOTAL% (min required: ${COVERAGE_MIN}%)"
-          awk -v total="$TOTAL" -v thr="${COVERAGE_MIN}" \
-              'BEGIN{ if (total < thr) exit 1 }'
-
+          echo "Coverage: $TOTAL% (required: ${COVERAGE_MIN}%)"
+          awk -v total="$TOTAL" -v thr="${COVERAGE_MIN}" 'BEGIN{ if (total < thr) exit 1 }'
       - uses: actions/upload-artifact@v4
         with:
           name: coverage
           path: coverage.out
 
-  # ------------------------------------------------------------------------------------
-  #
-  #   SECURITY – TRIVY + CODEQL + SBOM
-  #
-  # ------------------------------------------------------------------------------------
-
   security:
-    name: Security Scan (FS + Docker + IaC + Secrets + SBOM)
+    name: Security Scan (Trivy + SBOM)
     runs-on: ubuntu-latest
     needs: [ tests ]
     permissions:
@@ -137,7 +111,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Trivy install
       - name: Install Trivy
         run: |
           sudo apt-get update
@@ -146,47 +119,30 @@ jobs:
           tar -xf trivy_Linux-64bit.tar.gz
           sudo mv trivy /usr/local/bin/
 
-      # FS scan
       - name: Trivy FS Scan
         run: trivy fs --exit-code 1 --severity HIGH,CRITICAL .
 
-      # IaC scan
       - name: Trivy IaC Scan
         run: trivy config . || true
 
-      # Secrets scan
       - name: Trivy Secrets Scan
         run: trivy secret . || true
 
-      # Build Docker local para scan
       - name: Build Analysis Image
         run: docker build -t analysis-image -f Dockerfile .
 
-      # Docker scan
       - name: Trivy Docker Image Scan
         run: trivy image --exit-code 1 --severity HIGH,CRITICAL analysis-image
 
-      # SBOM
-      - name: Generate SBOM (CycloneDX)
+      - name: Generate SBOM
         run: |
           curl -sSfL https://raw.githubusercontent.com/CycloneDX/cyclonedx-gomod/main/install.sh | sh
           ./cyclonedx-gomod mod -licenses -output bom.json
+
       - uses: actions/upload-artifact@v4
         with:
           name: sbom
           path: bom.json
-
-      # Upload de relatórios SARIF
-      - uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: bom.json
-          category: sbom
-
-  # ------------------------------------------------------------------------------------
-  #
-  #   BUILD DOCKER FINAL COM CACHE CROSS-JOB
-  #
-  # ------------------------------------------------------------------------------------
 
   build:
     name: Build & Push Docker Image
@@ -199,7 +155,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - uses: docker/setup-qemu-action@v3
-
       - uses: docker/setup-buildx-action@v3
 
       - uses: docker/login-action@v3
@@ -209,8 +164,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract Metadata
-        uses: docker/metadata-action@v5
         id: meta
+        uses: docker/metadata-action@v5
         with:
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -222,7 +177,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: |
-            type=registry,ref=${{ env.CACHE_TAG }}
-          cache-to: |
-            type=registry,ref=${{ env.CACHE_TAG }},mode=max
+          cache-from: type=registry,ref=${{ env.CACHE_TAG }}
+          cache-to: type=registry,ref=${{ env.CACHE_TAG }},mode=max
