fix: Update coverage minimum threshold from 10 to 20 in pipeline configuration

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,8 +30,8 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.64.6
-          install-mode: binary
+          version: latest
+          install-mode: source
           args: --timeout=5m
 
   vet:
